--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         }
     ],
     "require": {
-        "arcanedev/no-captcha": "^6.0",
-        "inetstudio/admin-panel": "1.6.*"
+        "arcanedev/no-captcha": "^7.0"
     },
     "autoload": {
       "psr-4": {
