--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "arcanedev/no-captcha": "^9.0",
     "inetstudio/admin-panel": "1.8.*",
-    "inetstudio/favorites": "1.8.*"
+    "inetstudio/favorites": "1.8.*",
+    "inetstudio/persons": "1.8.*"
   },
   "autoload": {
     "psr-4": {
