--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     }
   ],
   "require": {
-    "arcanedev/no-captcha": "^9.0",
-    "inetstudio/admin-panel": "1.8.*",
-    "inetstudio/favorites": "1.8.*",
-    "inetstudio/persons": "1.8.*"
+    "arcanedev/no-captcha": "^10.0",
+    "inetstudio/admin-panel": "^6.0",
+    "inetstudio/favorites": "^6.0",
+    "inetstudio/persons": "^6.0"
   },
   "autoload": {
     "psr-4": {
