--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }
   ],
   "require": {
-    "arcanedev/no-captcha": "^10.0",
     "inetstudio/admin-panel": "^6.0",
+    "inetstudio/captcha": "^6.0",
     "inetstudio/favorites": "^6.0",
     "inetstudio/persons": "^6.0"
   },
