--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "inetstudio-faq",
   "version": "8.0.0",
   "dependencies": {
-    "switchery": "https://github.com/thomask/switchery"
+    "switchery": "^0.0.2"
   }
 }
